[tool.poetry]
name = "unemployment"
version = "0.1.0"
description = "Scripts to fetch payment history and certify payments"
authors = ["Zachary Weeden <zdw7287@rit.edu>"]

[tool.poetry.dependencies]
python = ">=3.6"
selenium = "^3.141.0"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
